--- a/index.html
+++ b/index.html
@@ -3,48 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Help and Support Bot</title>
+    <title>Temporary Downtime</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- Include jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <!-- Include Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    <audio id="background-audio" autoplay loop>
-        <source src="your-audio-file.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
 
-    <header class="header">
-        <h1 class="header-text">Our website is temporarily out of service. Please check back on November 25. Thank you!</h1>
-        <div class="video-container">
-            <video autoplay loop muted>
-                <source src="your-video.gif" type="video/gif">
-            </video>
-        </div>
-    </header>
-    <div class="background">
-        <div class="bot">
-            <div class="animated-text">
-                Bot: Hello 👋, sir/madam. I'm very glad to meet you. I apologize for any mistakes. Please select your query below:
-            </div>
-            <button id="button1">Payment Related Issue</button>
-            <button id="button2">Service Related Issue</button>
-            <button id="button3">Pricing Related Issue</button>
-            <button id="button4">Others</button>
-            <div class="animated-text">
-                Bot: Please click a button to contact our owner with a redirect link to WhatsApp.
+    <div class="container">
+        <div class="content">
+            <h1 class="animated-text">Temporary Downtime</h1>
+            <h5>Due to heavy traffic, the website has been down until November 25.</h5>
+            <img src="src/sunaifgif.gif" alt="Temporary Downtime GIF" class="gif">
+            <button class="contact-button">Contact Developer</button>
+            <div class="social-media">
+                <a href="https://twitter.com/sunaifn" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://instagram.com/sunaif_adkar" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://wa.me/917483862447" target="_blank"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
     </div>
-    <div class="watermark">
-        <img src="your-logo.png" alt="Your Logo">
-        Sunaif Adkar
-    </div>
-    <div class="social-media">
-        <a href="https://wa.me/your-whatsapp-link" class="social-icon whatsapp"></a>
-        <a href="https://twitter.com/your-twitter-link" class="social-icon twitter"></a>
-    </div>
-    <footer class="copyright">
-        <p>&copy; SUNAIF ADKAR/sunaifadkar.in 2023</p>
-    </footer>
+ <h9>© sunaifadkar.in</h9>    
     <script src="script.js"></script>
 </body>
 </html>
