--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
             <h1 class="animated-text">Temporary Downtime</h1>
             <h5>Due to heavy traffic, the website has been down until November 25.</h5>
             <img src="src/sunaifgif.gif" alt="Temporary Downtime GIF" class="gif">
+            <!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>YouTube Video</title>
+</head>
+
+<body>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ErVMF4oiQSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</body>
+
+</html>
+
             <button class="contact-button">Contact Developer</button>
             <div class="social-media">
                 <a href="https://twitter.com/sunaifn" target="_blank"><i class="fab fa-twitter"></i></a>
