--- a/index.html
+++ b/index.html
@@ -3,44 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temporary Downtime</title>
-    <link rel="stylesheet" href="styles.css">
-    <!-- Include jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <!-- Include Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <title>Website Temporarily Down</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2rem;
+            margin-top: 2rem;
+            /* Add animation properties for neon effect */
+            animation: neonText 1s infinite alternate;
+            text-shadow: 0 0 10px lime, 0 0 20px lime, 0 0 30px lime;
+        }
+
+        .logo {
+            width: 200px;
+            height: 200px;
+            margin: 2rem auto;
+        }
+
+        @keyframes neonText {
+            0% {
+                color: white;
+            }
+            100% {
+                color: lime;
+            }
+        }
+    </style>
 </head>
 <body>
-
-    <div class="container">
-        <div class="content">
-            <h1 class="animated-text">Temporary Downtime</h1>
-            <h5>Due to heavy traffic, the website has been down until November 25.</h5>
-            <img src="src/sunaifgif.gif" alt="Temporary Downtime GIF" class="gif">
-            <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YouTube Video</title>
-</head>
-
-<body>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/ErVMF4oiQSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</body>
-
-</html>
-
-            <button class="contact-button">Contact Developer</button>
-            <div class="social-media">
-                <a href="https://twitter.com/sunaifn" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://instagram.com/sunaif_adkar" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://wa.me/917483862447" target="_blank"><i class="fab fa-whatsapp"></i></a>
-            </div>
-        </div>
-    </div>
- <h9>© sunaifadkar.in</h9>    
-    <script src="script.js"></script>
+    <h1>Our Website Temporarily Down Due to Technical Issue</h1>
+    <img class="logo" src="src/sunaiflogo.png" alt="">
+    <p>Please wait until November 25th for the website to be back online.</p>
+    <p>In the meantime, you can watch our YouTube video:</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Cklk0WUH_Dc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>If you need to contact the developer, you can reach us through the following channels:</p>
+    <ul>
+        <li>Twitter: <a href="https://twitter.com/sunaifn">@sunaifn</a></li>
+        <li>Instagram: <a href="https://instagram.com/sunaif_adkar">@sunaif_adkar</a></li>
+        <li>WhatsApp: <a href="https://wa.me/917483862447">+917483862447</a></li>
+    </ul>
+    <p>Thank you for your understanding.</p>
+    <p>&copy; Sunaif Adkar</p>
 </body>
 </html>
