--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <h1>Our Website Temporarily Down Due to Technical Issue</h1>
-    <img class="logo" src="src/sunaiflogo.png" alt="">
+    <gif class="logo" src="src/sunaifgif.gif" alt="">
     <p>Please wait until November 25th for the website to be back online.</p>
     <p>In the meantime, you can watch our YouTube video:</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Cklk0WUH_Dc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
