--- a/index.html
+++ b/index.html
@@ -49,6 +49,122 @@
         <li>WhatsApp: <a href="https://wa.me/917483862447">+917483862447</a></li>
     </ul>
     <p>Thank you for your understanding.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sunaif Adkar Support Bot</title>
+    <style>
+        body {
+            background-color: #fff; /* White background */
+            color: #000; /* Black text */
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        #chat-container {
+            max-width: 400px;
+            margin: 50px auto;
+            background-color: #000000; /* Yellow background */
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        #chat-messages {
+            height: 300px;
+            overflow-y: scroll;
+            border-bottom: 1px solid #000;
+        }
+
+        #user-input {
+            display: flex;
+            margin-top: 10px;
+        }
+
+        #user-message {
+            flex: 1;
+            padding: 10px;
+        }
+
+        #send-button {
+            padding: 10px;
+            background-color: #000; /* Black */
+            color: #fff; /* White text */
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #logo {
+            display: block;
+            margin: 0 auto;
+            margin-bottom: 20px;
+        }
+
+        h1 {
+            color: #ffff00; /* Yellow text */
+            text-align: center;
+        }
+
+        /* Animation for the text */
+        @keyframes textAnimation {
+            from {
+                color: #ff0; /* Yellow */
+            }
+            to {
+                color: #f90; /* Darker Yellow/Orange */
+            }
+        }
+
+        .animated-text {
+            animation: textAnimation 1s infinite alternate; /* Alternate between yellow and orange */
+        }
+    </style>
+</head>
+<body>
+    <div id="chat-container">
+        <img id="logo" src="logo.png" alt="Sunaif Adkar Logo" width="100" height="100">
+        <h1>Sunaif Adkar Support Bot</h1>
+        <div id="chat-messages"></div>
+        <div id="user-input">
+            <input type="text" id="user-message" placeholder="Type your message...">
+            <button id="send-button" onclick="sendMessage()">Send</button>
+        </div>
+    </div>
+
+    <script>
+        function sendMessage() {
+            var userMessage = document.getElementById('user-message').value;
+            var chatMessages = document.getElementById('chat-messages');
+
+            // Append user message to the chat
+            chatMessages.innerHTML += '<p>User: ' + userMessage + '</p>';
+
+            // Example bot reply (replace this with your logic)
+            var botReply = 'Bot: ' + generateBotReply(userMessage);
+
+            // Append bot reply to the chat
+            chatMessages.innerHTML += '<p class="animated-text">' + botReply + '</p>';
+
+            // Clear the user input field
+            document.getElementById('user-message').value = '';
+
+            // Scroll to the bottom of the chat
+            chatMessages.scrollTop = chatMessages.scrollHeight;
+        }
+
+        function generateBotReply(userMessage) {
+            // Your logic for generating a bot reply based on user input goes here
+            // For now, let's return a generic response with a link to WhatsApp
+            return 'I am here to assist you. Please <a href="https://wa.me/917483862447" target="_blank">contact us</a> via WhatsApp or Instagram for support.';
+        }
+    </script>
+</body>
+</html>
+        
     <p>&copy; Sunaif Adkar</p>
 </body>
 </html>
