sunaif adkar king

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="container">
                 <nav class="navbar navbar-dark navbar-expand-lg py-lg-0">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="text-primary mb-0 display-5">Pest<span class="text-white">Kit</span><i class="fa fa-spider text-primary ms-2"></i></h1>
+                        <h1 class="text-primary mb-0 display-5">brisk<span class="text-white">pest management</span><i class="fa fa-spider text-primary ms-2"></i></h1>
                     </a>
                     <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-dark"></span>
