--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="container">
                 <nav class="navbar navbar-dark navbar-expand-lg py-lg-0">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="text-primary mb-0 display-5">brisk<span class="text-white">pest</span><i class=""></i></h1>
+                        <h1 class="text-primary mb-0 display-5">brisk<span class="text-white">group of companies</span><i class=""></i></h1>
                     </a>
                     <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-dark"></span>
@@ -651,7 +651,7 @@
                 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay=".5s">
                     <div class="testimonial-item">
                         <div class="testimonial-content rounded mb-4 p-4">
-                            <p class="fs-5 m-0">Lorem ipsum dolor sit amet elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam quis tempor.</p>
+                            <p class="fs-5 m-0">Our specialist Entomologists delivering inspections/Audit on a regular basis to provide you with appropriate standard quality management system documents to reduce risk in your business.</p>
                         </div>
                         <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
                             <div class="position-relative">
@@ -675,7 +675,7 @@
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-content rounded mb-4 p-4">
-                            <p class="fs-5 m-0">Lorem ipsum dolor sit amet elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam quis tempor.</p>
+                            <p class="fs-5 m-0">Our specialist Entomologists delivering inspections/Audit on a regular basis to provide you with appropriate standard quality management system documents to reduce risk in your business.</p>
                         </div>
                         <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
                             <div class="position-relative">
@@ -699,7 +699,7 @@
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-content rounded mb-4 p-4">
-                            <p class="fs-5 m-0">Lorem ipsum dolor sit amet elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam quis tempor.</p>
+                            <p class="fs-5 m-0">Our specialist Entomologists delivering inspections/Audit on a regular basis to provide you with appropriate standard quality management system documents to reduce risk in your business.</p>
                         </div>
                         <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
                             <div class="position-relative">
@@ -723,7 +723,7 @@
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-content rounded mb-4 p-4">
-                            <p class="fs-5 m-0">Lorem ipsum dolor sit amet elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam quis tempor.</p>
+                            <p class="fs-5 m-0">Our specialist Entomologists delivering inspections/Audit on a regular basis to provide you with appropriate standard quality management system documents to reduce risk in your business.</p>
                         </div>
                         <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
                             <div class="position-relative">
@@ -758,7 +758,8 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">About brisk</h4>
-                            <p>Nostrud exertation ullamco labor nisi aliquip ex ea commodo consequat duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+                            <p>Brisk Pest Management Service  - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way.
+Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
                             <p class="mb-0"><a class="" href="#">brisk </a> &copy; 2023 All Right Reserved.</p>
                         </div>
                     </div>
@@ -777,10 +778,16 @@
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">Services Link</h4>
                             <div class="d-flex flex-column align-items-start">
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Apartment Cleaning</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Office Cleaning</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Car Washing</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Green Cleaning</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Rodent Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Mosquito Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Bed Bug Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>WASP control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Ants Treatment</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Cockroach Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Fly Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Honey Bee Removal</a>
+
+
                             </div>
                             
                         </div>
@@ -788,9 +795,9 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">Contact Us</h4>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 pb-3 border-bottom rounded-0"><i class="fa fa-map-marker-alt me-3"></i>123 Street, CA, USA</a>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 py-3 border-bottom rounded-0"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</a>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 py-3 border-bottom rounded-0"><i class="fa fa-envelope me-3"></i>info@example.com</a>
+                            <a href="" class="btn btn-link w-100 text-start ps-0 pb-3 border-bottom rounded-0"><i class="fa fa-map-marker-alt me-3"></i>banglore, india</a>
+                            <a href="" class="btn btn-link w-100 text-start ps-0 py-3 border-bottom rounded-0"><i class="fa fa-phone-alt me-3"></i>++919900102056</a>
+                            <a href="" class="btn btn-link w-100 text-start ps-0 py-3 border-bottom rounded-0"><i class="fa fa-envelope me-3"></i>sunaif@gmail.com</a>
                         </div>
                     </div>
                 </div>
@@ -805,7 +812,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-                        <a href="#" class="text-primary mb-0 display-6">Pest<span class="text-white">Kit</span><i class="fa fa-spider text-primary ms-2"></i></a>
+                        <a href="#" class="text-primary mb-0 display-6">Brisk<span class="text-white">group of companies</span><i class=""></i></a>
                     </div>
                     <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
                         <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-twitter"></i></a>
