--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                             <div class="rotate-right bg-dark"></div>
                             <img src="img/about-img.jpg" class="img-fluid h-100" alt="img">
                             <div class="bg-white experiences">
-                                <h1 class="display-3">20</h1>
+                                <h1 class="display-3">6</h1>
                                 <h6 class="fw-bold">Years Of Experiences</h6>
                             </div>
                         </div>
@@ -206,8 +206,9 @@
                     <div class="col-lg-6 col-md-12 wow fadeInUp" data-wow-delay=".6s">
                         <div class="about-item overflow-hidden">
                             <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">About brisk</h5>
-                            <h1 class="display-5 mb-2">World Best Pest Control Services Since 2008</h1>
-                            <p class="fs-5" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiu smod tempor incididunt ut labore dolore magna aliqua.Quis ipsum suspen disse ultrices gravida Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                            <h1 class="display-5 mb-2">World Best Pest Control Services Since 2021</h1>
+                            <p class="fs-5" style="text-align: justify;">Brisk Pest Management Service  - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way.
+Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
                             <div class="row">
                                 <div class="col-3">
                                     <div class="text-center">
