--- a/index.html
+++ b/index.html
@@ -145,48 +145,6 @@
         </div>
         <!-- Carousel End -->
 
-        
-        <!-- Get In Touch Start -->
-        <div class="container-fluid py-5 wow fadeInUp" data-wow-delay=".3s">
-            <div class="container py-5">
-                <div class="bg-light px-4 py-5 rounded">
-                    <div class="text-center">
-                        <h1 class="display-5 mb-5">Find Your Pest Control Services</h1>
-                    </div>
-                    <form class="text-center mb-4" action="#">
-                        <div class="row g-4">
-                            <div class="col-xl-10 col-lg-12">
-                                <div class="row g-4">
-                                    <div class="col-md-6 col-xl-3">
-                                        <select class="form-select p-3 border-0">
-                                            <option value="Type Of Service" class="">Type Of Service</option>
-                                            <option value="Pest Control-2">Pest Control-2</option>
-                                            <option value="Pest Control-3">Pest Control-3</option>
-                                            <option value="Pest Control-4">Pest Control-4</option>
-                                            <option value="Pest Control-5">Pest Control-5</option>
-                                        </select>
-                                    </div>
-                                    <div class="col-md-6 col-xl-3">
-                                        <input type="text" class="form-control p-3 border-0" placeholder="Name">
-                                    </div>
-                                    <div class="col-md-6 col-xl-3">
-                                        <input type="text" class="form-control p-3 border-0" placeholder="Phone">
-                                    </div>
-                                    <div class="col-md-6 col-xl-3">
-                                        <input type="email" class="form-control p-3 border-0" placeholder="Email">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-2 col-lg-12">
-                                <input type="button" class="btn btn-primary w-100 p-3 border-0" value="GET STARTED">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <!-- Get In Touch End -->
-
 
         <!-- About Start -->
         <div class="container-fluid py-5">
@@ -203,7 +161,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12 wow fadeInUp" data-wow-delay=".6s">
+                    <div class="col-lg-6 col-md-12 wow fadeInUp" data-wow-delay=".9s">
                         <div class="about-item overflow-hidden">
                             <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">About brisk</h5>
                             <h1 class="display-5 mb-2">World Best Pest Control Services Since 2021</h1>
@@ -255,7 +213,6 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
                                     </div>
                                 </div>
                             </div>
-                            <button type="button" class="btn btn-primary border-0 rounded-pill px-4 py-3 mt-5">Find Services</button>
                         </div>
                     </div>
                 </div>
@@ -279,16 +236,16 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
                                     <i class="fa fa-spider fa-3x text-primary"></i>
                                 </div>
                             </div>
-                            <h4>Spiders</h4>
-                            <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisc elit sed.</p>
-                            <button type="button" class="btn btn-primary border-0 rounded-pill px-4 py-3">Learn More</button>
+                            <h4>Rodent Control</h4>
+                            <p class="fs-5">Fast, eco Rodent Control for a pest-free space!</p>
                         </div>
                     </div>
                     <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".5s">
                         <div class="bg-light rounded p-5 services-item">
                             <div class="d-flex" style="align-items: center; justify-content: center;">
                                 <div class="mb-4 rounded-circle services-inner-icon">
-                                    <i class="fa fa-spider fa-3x text-primary"></i>
+                                <i class="fa fa-rat fa-3x text-primary"></i>
+
                                 </div>
                             </div>
                             <h4 class="text-center">Mosquitos</h4>
