--- a/index.html
+++ b/index.html
@@ -118,7 +118,6 @@
                             <div class="container carousel-content">
                                 <h4 class="text-white mb-4 animated slideInDown">No 1 Pest Control Services</h4>
                                 <h1 class="text-white display-1 mb-4 animated slideInDown">Enjoy Your Home Totally Pest Free</h1>
-                                <a href="" class="me-2"><button type="button" class="px-5 py-3 btn btn-primary border-2 rounded-pill animated slideInDown">Read More</button></a>
                             </div>
                         </div>
                     </div>
@@ -147,70 +146,67 @@
 
 
         <!-- About Start -->
-        <div class="container-fluid py-5">
-            <div class="container py-5">
-                <div class="row g-5">
-                    <div class="col-lg-6 col-md-12 wow fadeInUp" data-wow-delay=".3s">
-                        <div class="about-img">
-                            <div class="rotate-left bg-dark"></div>
-                            <div class="rotate-right bg-dark"></div>
-                            <img src="img/about-img.jpg" class="img-fluid h-100" alt="img">
-                            <div class="bg-white experiences">
-                                <h1 class="display-3">6</h1>
-                                <h6 class="fw-bold">Years Of Experiences</h6>
+<div class="container-fluid py-5">
+    <div class="container py-5">
+        <div class="row g-5">
+            <div class="col-lg-6 col-md-12 wow fadeInUp" data-wow-delay=".3s">
+                <div class="about-img">
+                    <div class="rotate-left bg-dark"></div>
+                    <div class="rotate-right bg-dark"></div>
+                    <img src="img/about-img.jpg" class="img-fluid h-100" alt="img">
+                    <div class="bg-white experiences">
+                        <h1 class="display-3">6</h1>
+                        <h6 class="fw-bold">Years Of Experiences</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12 wow fadeInUp" data-wow-delay=".9s">
+                <div class="about-item overflow-hidden">
+                    <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">About brisk</h5>
+                    <h1 class="display-5 mb-2">World Best Pest Control Services Since 2021</h1>
+                    <p class="fs-5" style="text-align: justify;">Brisk Pest Management Service  - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way. Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
+                    <div class="row">
+                        <div class="col-3">
+                            <div class="text-center">
+                                <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
+                                    <i class="fas fa-city fa-4x text-primary"></i>
+                                </div>
+                                <div class="my-2">
+                                    <h5>Building</h5>
+                                    <h5>Cleaning</h5>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-6 col-md-12 wow fadeInUp" data-wow-delay=".9s">
-                        <div class="about-item overflow-hidden">
-                            <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">About brisk</h5>
-                            <h1 class="display-5 mb-2">World Best Pest Control Services Since 2021</h1>
-                            <p class="fs-5" style="text-align: justify;">Brisk Pest Management Service  - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way.
-Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
-                            <div class="row">
-                                <div class="col-3">
-                                    <div class="text-center">
-                                        <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
-                                            <i class="fas fa-city fa-4x text-primary"></i>
-                                        </div>
-                                        <div class="my-2">
-                                            <h5>Building</h5>
-                                            <h5>Cleaning</h5>
-                                        </div>
-                                    </div>
+                        <div class="col-3">
+                            <div class="text-center">
+                                <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
+                                    <i class="fas fa-school fa-4x text-primary"></i>
                                 </div>
-                                <div class="col-3">
-                                    <div class="text-center">
-                                        <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
-                                            <i class="fas fa-school fa-4x text-primary"></i>
-                                        </div>
-                                        <div class="my-2">
-                                            <h5>Education</h5>
-                                            <h5>center</h5>
-                                        </div>
-                                    </div>
+                                <div class="my-2">
+                                    <h5>Education</h5>
+                                    <h5>center</h5>
                                 </div>
-                                <div class="col-3">
-                                    <div class="text-center">
-                                        <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
-                                            <i class="fas fa-warehouse fa-4x text-primary"></i>
-                                        </div>
-                                        <div class="my-2">
-                                            <h5>Warehouse</h5>
-                                            <h5>Cleaning</h5>
-                                        </div>
-                                    </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="text-center">
+                                <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
+                                    <i class="fas fa-warehouse fa-4x text-primary"></i>
                                 </div>
-                                <div class="col-3">
-                                    <div class="text-center">
-                                        <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
-                                            <i class="fas fa-hospital fa-4x text-primary"></i>
-                                        </div>
-                                        <div class="my-2">
-                                            <h5>Hospital</h5>
-                                            <h5>Cleaning</h5>
-                                        </div>
-                                    </div>
+                                <div class="my-2">
+                                    <h5>Warehouse</h5>
+                                    <h5>Cleaning</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="text-center">
+                                <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
+                                    <i class="fas fa-hospital fa-4x text-primary"></i>
+                                </div>
+                                <div class="my-2">
+                                    <h5>Hospital</h5>
+                                    <h5>Cleaning</h5>
                                 </div>
                             </div>
                         </div>
@@ -218,7 +214,10 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
                 </div>
             </div>
         </div>
-        <!-- About End -->
+    </div>
+</div>
+<!-- About End -->
+
 
         <!-- Project Start -->
        <div class="container-fluid py-5">
